--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,12 @@ img {
   height: auto;
 }
 
+input,
+select,
+textarea {
+  color: var(--fill-in-color);
+}
+
 body {
   font-family: "Roboto", "sans-serif";
   font-style: normal;
@@ -790,7 +796,13 @@ body {
 }
 
 .telegram-sub-label {
+  width: 358px;
+  height: 50px;
   margin-right: 12px;
+  padding-top: 15px;
+  padding-right: 16px;
+  padding-bottom: 15px;
+  padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -799,15 +811,35 @@ body {
 }
 
 .telegram-sub-button {
+  display: flex;
   border-style: none;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  padding: 10px 62px 10px 29px;
+  padding: 10px 0px 10px 29px;
   border-radius: 4px;
   background-color: var(--hover-color);
   color: var(--fill-in-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+
+.telegram-btn-logo {
+  display: block;
+  width: 24px;
+  height: 24px;
+  margin: 3px 28px 3px 10px;
+  background-image: url(../img/social-links/telegram-1.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
