--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ body {
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
+  /* opacity: 0; */
   pointer-events: none;
 }
 
@@ -242,9 +242,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
   min-width: 528px;
   min-height: 581px;
+  transform: translate(-50%, -50%) scale(1);
   background-color: var(--fill-in-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -265,6 +265,14 @@ body {
   background-image: url(../img/modal-close-btn.svg);
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.modal-input-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input-field {
 }
 
 .filter-button {
