--- a/css/styles.css
+++ b/css/styles.css
@@ -230,11 +230,11 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 98;
+  z-index: 99;
 }
 
 .backdrop.is-hidden {
-  /* opacity: 0; */
+  opacity: 0;
   pointer-events: none;
 }
 
@@ -242,9 +242,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 528px;
-  min-height: 581px;
-  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  height: 581px;
+  transform: translate(-50%, -50%);
   background-color: var(--fill-in-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -267,12 +267,97 @@ body {
   background-position: center;
 }
 
+.modal-header {
+  margin-bottom: 12px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-color);
+}
+
 .modal-input-form {
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.modal-input-label {
+  margin-bottom: 4px;
+  margin-left: 40px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  text-align: left;
+  color: var(--main-text-color);
 }
 
 .modal-input-field {
+  margin-right: 39px;
+  margin-bottom: 10px;
+  margin-left: 41px;
+  width: 448px;
+  height: 40px;
+  font-style: var(--header-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: var(--main-text-color);
+}
+
+.modal-input-textarea {
+  margin-right: 39px;
+  margin-bottom: 20px;
+  margin-left: 41px;
+  padding: 12px 16px 12px 16px;
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  background-color: transparent;
+  color: var(--main-text-color);
+}
+
+.modal-input-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.33;
+  align-items: left;
+  letter-spacing: 0.03em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.checkbox-agr-link {
+  color: var(--hover-color);
+}
+
+.modal-send-button {
+  width: 200px;
+  height: 50px;
+  border-style: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  padding: 10px 32px;
+  background-color: var(--hover-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--fill-in-color);
+  cursor: pointer;
 }
 
 .filter-button {
