--- a/css/styles.css
+++ b/css/styles.css
@@ -287,8 +287,33 @@ body {
 }
 
 .modal-input-form {
+  position: relative;
   display: flex;
   flex-direction: column;
+}
+
+.modal-input-agreement {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.modal-input-agreement input {
+  visibility: hidden;
+}
+
+.modal-input-agreement label::before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  top: 4px;
+  left: 8px;
+  width: 16px;
+  height: 15px;
+  /* margin-right: 8px; */
+  background: url("../img/checkbox.svg");
 }
 
 .modal-input-label {
@@ -302,6 +327,7 @@ body {
 
 .modal-input-field {
   margin-bottom: 10px;
+  padding-left: 40px;
   width: 448px;
   height: 40px;
   font-style: var(--header-color);
@@ -314,8 +340,9 @@ body {
 .modal-input-textarea {
   margin-bottom: 20px;
   padding: 12px 16px 12px 16px;
+  max-width: 100%;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
@@ -331,15 +358,22 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.checkbox {
+.modal-input-icon {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0);
+  top: 32px;
+  left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-input-check-icon {
+  position: absolute;
+  top: 3px;
+  left: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .checkbox-agr-link {
