--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ body {
 
 .hero-button:hover,
 .hero-button:focus {
-  color: var(--header-color);
+  color: var(--hover-color);
   background-color: var(--wwd-backgr);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -292,12 +292,47 @@ body {
   flex-direction: column;
 }
 
+.modal-input-field:focus-within {
+  color: var(--hover-color);
+}
+
+.modal-input-form:hover input,
+.modal-input-form:focus input {
+  border: 1px solid var(--hover-color);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.modal-input-form:hover svg,
+.modal-input-form:focus svg {
+  fill: var(--hover-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover svg,
+.modal-close-button:focus svg {
+  fill: #2196f3;
+}
+
+input[type="text"]:active,
+input[type="text"]:focus + svg:focus {
+  fill: #2196f3;
+}
+
 .modal-input-agreement {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.modal-input-agreement input[type="checkbox"] + label::before {
+  background: url(..//img/checkbox.svg);
+}
+
+.modal-input-agreement input[type="checkbox"]:checked + label::before {
+  background: url(../img/icon-check.svg);
 }
 
 .modal-input-agreement input {
@@ -357,6 +392,13 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
+.modal-input-form:hover textarea,
+.modal-input-form:focus textarea {
+  border: 1px solid var(--hover-color);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
 .modal-input-icon {
   position: absolute;
   top: 32px;
@@ -393,6 +435,13 @@ body {
   border-radius: 4px;
   color: var(--fill-in-color);
   cursor: pointer;
+}
+
+.modal-send-button:hover,
+.modal-send-button:focus {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .filter-button {
