--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,8 @@ body {
 .modal-close-button {
   position: absolute;
   display: flex;
+  align-items: center;
+  justify-content: center;
   top: 8px;
   right: 8px;
   padding: 0;
@@ -270,9 +272,6 @@ body {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
-  background-image: url(../img/modal-close-btn.svg);
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .modal-header {
@@ -292,15 +291,13 @@ body {
   flex-direction: column;
 }
 
-.modal-input-field:focus-within {
-  color: var(--hover-color);
-}
-
-.modal-input-form:hover input,
-.modal-input-form:focus input {
+.modal-input-form input:hover,
+.modal-input-form input:focus {  
   border: 1px solid var(--hover-color);
   box-sizing: border-box;
   border-radius: 4px;
+  color: rgba(117, 117, 117, 0.5)
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-form:hover svg,
@@ -311,12 +308,7 @@ body {
 
 .modal-close-button:hover svg,
 .modal-close-button:focus svg {
-  fill: #2196f3;
-}
-
-input[type="text"]:active,
-input[type="text"]:focus + svg:focus {
-  fill: #2196f3;
+  fill: var(--hover-color);
 }
 
 .modal-input-agreement {
@@ -371,6 +363,10 @@ input[type="text"]:focus + svg:focus {
   color: var(--main-text-color);
 }
 
+.modal-input-form:focus-within {
+  fill: var(--hover-color);
+}
+
 .modal-input-textarea {
   margin-bottom: 20px;
   padding: 12px 16px 12px 16px;
@@ -392,8 +388,8 @@ input[type="text"]:focus + svg:focus {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-input-form:hover textarea,
-.modal-input-form:focus textarea {
+.modal-input-form textarea:hover,
+.modal-input-form textarea:focus {
   border: 1px solid var(--hover-color);
   box-sizing: border-box;
   border-radius: 4px;
