--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,7 @@ body {
 .modal-close-button:hover svg,
 .modal-close-button:focus svg {
   fill: var(--hover-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-agreement {
