--- a/css/styles.css
+++ b/css/styles.css
@@ -292,11 +292,12 @@ body {
 }
 
 .modal-input-form input:hover,
-.modal-input-form input:focus {  
+.modal-input-form input:focus {
+  outline: none;
   border: 1px solid var(--hover-color);
   box-sizing: border-box;
   border-radius: 4px;
-  color: rgba(117, 117, 117, 0.5)
+  color: rgba(117, 117, 117, 0.5);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
